AO3-6844 Update markup of tag set pages, expand_contract_all, and expand_contract_shuffle * fix markup and alignment of buttons for expanding, contracting, and shuffling * move unassociated tags h4 to a more correct location, i.e., under the h3 it applies to * update tests to look for buttons * update step definition to expect button * use one ol.index with the class tagset
* nested listboxes should use h4 heading level since parent uses h3
* update CSS to apply regardless of heading level

* include the tag sets in the h2 on show_options instead of in a tiny ul under it

* remove incorrect ARIA roles in navigation

--- a/public/stylesheets/site/2.0/11-group-listbox.css
+++ b/public/stylesheets/site/2.0/11-group-listbox.css
@@ -69,6 +69,11 @@ http://otwcode.github.com/docs/front_end_coding/patterns/listbox
   position: static;
 }
 
+/* magic number alert: line-height (1.286) plus vertical padding (0.15em * 2) of the actions */
+.tagset .listbox > .heading:has(.actions), .tagset .listbox > .heading:has(~ .actions)  {
+  line-height: 1.586;
+}
+
 /*INTERACTION context (show many/more/lots)*/
 
 .listbox .options {
